--- a/mzday3/projectone/style.css
+++ b/mzday3/projectone/style.css
@@ -1,6 +1,14 @@
 .top{
     background-color: #1F2937;
 }
+.top-content{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: stretch;
+    padding-bottom: 22px;
+}
 .header{
     display: flex;
     flex-direction: row;
@@ -8,8 +16,6 @@
     justify-content: space-around;
     align-items: center;
     font-weight: 800;
-    /* font-family: ; */
-
 }
 ul{
     display: flex;
@@ -27,10 +33,17 @@ h2, p , img, a, .header{
     color: aliceblue;
 
 }
-
-button{
+#header-para{
+    margin-bottom: 6px;
+    margin-top: -14px;
+}
+#header-button{
     color: aliceblue;
     background-color: #3882F6;
+    width: 65px;
+    border: none;
+    border-radius: 4px;
+    /* margin-bottom:; */
    
 
 }
@@ -38,6 +51,7 @@ button{
     display: flex;
     width: auto;
     justify-content: space-around;
+    padding-top: 29px;
 }
 .intro h2, button{
     display: flex;
@@ -57,6 +71,8 @@ button{
     display: flex;
     flex-direction: column;
     padding-left: 76px;
+    padding-bottom: 43px;
+    justify-content: space-evenly;
 }
 
 img{
@@ -67,6 +83,8 @@ img{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 35px;
+    padding-top: 22px;
     
 }
 
@@ -128,6 +146,9 @@ img{
 }
 .second-body{
     background-color: #cddce1;
+    padding-bottom: 25px;
+    padding-top: 25px;
+
 }
 .section{
     background-color: #ffffff;
@@ -135,6 +156,8 @@ img{
     justify-content: center;
     padding: 66px;
     border-radius: 8px;
+    padding-top: 80px;
+    padding-bottom: 71px;
 }
 
 h4{
@@ -146,6 +169,7 @@ h4{
     border: 1px  #cddce1 solid;
     color: aliceblue;
     border-radius: 4px;
+    background-color: #3882f6;
 }
 .content{
     display: flex;
